ADD PrimeNG and PrimeFlex

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div>{{title}}</div>
+<p-card>
+  <div>{{title}}</div>
+</p-card>
+
+<br>
+
+<button pButton label="Teste"></button>
 
 <router-outlet></router-outlet>
